--- a/buy-tickets.html
+++ b/buy-tickets.html
@@ -36,7 +36,7 @@
       <a href="index.html" class="logo d-flex align-items-center">
         <!-- Uncomment the line below if you also wish to use an image logo -->
         <img src="assets/img/gallery/CASA logo.jpg" alt="">
-        <h1 class="sitename">CASA</h1>
+        <h1 class="sitename">Register - CASA</h1>
       </a>
 
       <nav id="navmenu" class="navmenu">
@@ -59,7 +59,7 @@
         <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
       </nav>
 
-      <a class="btn-getstarted" href="buy-tickets.html">Buy Tickets</a>
+      <a class="btn-getstarted" href="buy-tickets.html">Register</a>
 
     </div>
   </header>
