Recently added php to CASA

--- a/index.html
+++ b/index.html
@@ -157,11 +157,7 @@
               <p data-aos="fade-up" data-aos-delay="300">The Concerned Akwete Students Association (CASA) was born from a simple but powerful idea: <br> “If we don’t preserve our story, who will?”</p>
               <p data-aos="fade-up" data-aos-delay="300">In a world where culture is disappearing and technology is rapidly changing communities, a group of passionate Akwete students came together with one mission — to protect, uplift, and modernize the heritage of Akwete, while helping young people discover their purpose and skills.</p>
               <p data-aos="fade-up" data-aos-delay="400">CASA began as small conversations among students who believed that Akwete is more than a fabric — it is history, identity, creativity, and pride. Over time, those conversations grew into a vision, and that vision became a movement.</p>
-              <p data-aos="fade-up" data-aos-delay="400">Today, CASA stands as a bridge between:
-<br>
-Our past — the legendary art of Akwete weaving, passed down by generations of skilled women.
-<br>
-Our present — a community of vibrant youth seeking knowledge, empowerment, and innovation. <br>Our future — a connected, educated, and impactful Akwete where tradition and technology work hand-in-hand.</p>
+              <p data-aos="fade-up" data-aos-delay="400">Today, CASA stands as a bridge between:<br>Our past — the legendary art of Akwete weaving, passed down by generations of skilled women.<br>Our present — a community of vibrant youth seeking knowledge, empowerment, and innovation. <br>Our future — a connected, educated, and impactful Akwete where tradition and technology work hand-in-hand.</p>
 
               <div class="stats-grid" data-aos="fade-up" data-aos-delay="500">
                 <div class="stat-item">
